ctyped changelog
================


Unreleased
----------
* Class methods performance improved (less wrappers).


v0.5.0
------
+ Added 'CRef' helper to pass by reference in arguments.
+ Now '-> None' annotation can be used for 'void' result.
+ Proper 'bool' handling.


v0.4.0
------
+ 'function/f' and 'method/m' decorators now allow no params (less brackets).
+ Added 'Library.cls' decorator for classes.


v0.3.0
------
+ 'functions_prefix' context manager is replaced by advanced 'scope'.


v0.2.0
------
+ Added 'int_bits' shortcut option.
+ Added 'int_sign' shortcut option.
+ Added CObject convenience.
+ Added support for Python strings as wide chars.
* Result is now casted with 'errcheck'.


v0.1.0
------
+ Basic functionality.