@@ -4,6 +4,7 @@ ctyped changelog
 
 Unreleased
 ----------
++ Basic support for callback functions.
 * Class methods performance improved (less wrappers).
 
 
